# rain-ir

./: .gitignore  .gitlab-ci.yml  .gitpod.yml  Cargo.toml  README.md
benches/: basic.rs
examples/repl/: main.rs
src/: lib.rs
src/builder/: mod.rs
src/control/: mod.rs  phi.rs  rec.rs  switch.rs  ternary.rs
src/control/nondeterministic/: mod.rs
src/control/termination/: mod.rs
src/data/: mod.rs
src/eval/: ctx.rs  mod.rs
src/function/: gamma.rs  lambda.rs  mod.rs  phi.rs  pi.rs
src/function/gamma/: mod.rs  pattern.rs
src/graph/: bfs.rs  dfs.rs  mod.rs  ndfs.rs
src/lifetime/: affine.rs  arr.rs  borrow.rs  branch.rs  color.rs  ctx.rs  data.rs  group.rs  lifetime_impl.rs  mod.rs  owner.rs  parametrized.rs  params.rs  region.rs  relevant.rs
src/parser/: mod.rs
src/parser/ast/: mod.rs
src/parser/builder/: mod.rs
src/prettyprinter/: mod.rs  printer.rs  tokens.rs
src/primitive/: bits.rs  finite.rs  logical.rs  mod.rs
src/primitive/bits/: add.rs  bits_impl.rs  div.rs  ext.rs  mod.rs  modl.rs  mul.rs  neg.rs  sh.rs  sub.rs
src/proof/: identity.rs  mod.rs
src/proof/paths/: induction.rs  mod.rs
src/region/: data.rs  mod.rs  parameter.rs  parametrized.rs  region_impl.rs
src/typing/: kind.rs  mod.rs  predicate.rs
src/typing/kind/: layout.rs  mod.rs  primitive.rs  universe.rs
src/util/: addr.rs  format.rs  hash_cache.rs  mod.rs  symbol_table.rs  variant.rs
src/util/cache/: arr.rs  mod.rs
src/value/: arr.rs  cast.rs  error.rs  expr.rs  gamma.rs  mod.rs  predicate.rs  sum.rs  tuple.rs  universe.rs  valid_impl.rs
src/value/data/: mod.rs
src/value/eval/: ctx.rs  mod.rs
src/value/function/: gamma.rs  lambda.rs  mod.rs  phi.rs  pi.rs
src/value/lifetime/: mod.rs  parametrized.rs  region.rs
src/value/primitive/: finite.rs  logical.rs  mod.rs
src/value/region/: mod.rs
src/value/typing/: mod.rs
tests/: sample_programs.rs
