[package]
name = "rain-lang"
version = "0.0.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "^0.3"
smallvec = "^1.4"
elysees = "^0.0.2"
dashmap = "^3"
lazy_static = "^1.4"
ref-cast = "^1"
once_cell = "^1.4"
either = "^1.5"
num = "^0.2"
fxhash = "^0.2"
itertools = "^0.9"
is_sorted = "^0.1"
thin-dst = "^1.1.0"

# Parser dependencies
nom = { version = "^5", optional = true }
indexmap = { version = "^1.3.2", optional = true }

[dev-dependencies]
pretty_assertions = "^0.6"
rustyline = "^6.1"
clap = "^2.33"
rand = "^0.7"
rand_xoshiro = "^0.4"

[features]
default = [
    "parser", 
    "prettyprinter"
    ]
parser = ["nom", "symbol_table"]
prettyprinter = ["symbol_table"]
symbol_table = ["indexmap"]

[[example]]
name = "repl"
required-features = ["parser", "prettyprinter"]
