[package]
name = "rain-ir"
version = "0.0.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"
repository = "https://gitlab.com/rain-lang/rain-ir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "^0.3"
smallvec = "^1.4"
elysees = "^0.1.1"
dashmap = "^3"
lazy_static = "^1.4"
ref-cast = "^1"
once_cell = "^1.4"
either = "^1.5"
num = "^0.3"
fxhash = "^0.2"
itertools = "^0.9"
is_sorted = "^0.1"
thin-dst = "^1.1.0"
dashcache = "^0.1"

# Parser dependencies
nom = { version = "^5", optional = true }
hayami = { version = "^0.1", optional = true }

[dev-dependencies]
pretty_assertions = "^0.6"
rustyline = "^6.1"
clap = "^2.33"
rand = "^0.7"
rand_xoshiro = "^0.4"

[features]
default = [
    "parser", 
    "prettyprinter"
    ]
parser = ["nom", "hayami"]
prettyprinter = ["hayami"]

[[example]]
name = "repl"
required-features = ["parser", "prettyprinter"]
