[package]
name = "rain-ir"
version = "0.0.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"
repository = "https://gitlab.com/rain-lang/rain-ir"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-ast = { git = "https://gitlab.com/rain-lang/rain-ast.git", default-features = false }
ahash = "^0.4"
smallvec = "^1.4"
elysees = { version = "^0.2.0", features = ["ptr-union"] }
dashmap = "^3"
lazy_static = "^1.4"
ref-cast = "^1"
once_cell = "^1.4"
either = "^1.5"
num = "^0.3"
fxhash = "^0.2"
itertools = "^0.9"
is_sorted = "^0.1"
thin-dst = "^1.1.0"
dashcache = "^0.2.0"
im = "^15"
hayami = "^0.3"
im-rc = "^15"
rand = { version = "^0.7", optional = true }
arrayvec = "^0.5"
indexmap = "^1.5"
ptr-union = "^2.1.0"
erasable = "^1.2.1"

[dev-dependencies]
pretty_assertions = "^0.6"
rustyline = "^6.1"
clap = "^2.33"
rand_xoshiro = "^0.4"
criterion = "^0.3"

[features]
default = [
    "prettyprinter",
    "rand",
    "pool"
    ]
prettyprinter = []
pool = ["im-rc/pool"]

[[bench]]
name = "basic"
path = "benches/basic.rs"
harness = false